# wormgpt

./: README.md
src/: WormGPT.py  pyproject.toml
